k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: architecture-studio
  namespace: architecture-studio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - architecture-studio.jannekeipert.de
      secretName: multi-domain-cert
  rules:
    - host: architecture-studio.jannekeipert.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: architecture-studio
                port:
                  number: 80
